--- a/NetExplorer/templates/NetExplorer/about.html
+++ b/NetExplorer/templates/NetExplorer/about.html
@@ -17,15 +17,36 @@
         PlanNET has been developed by the <a href="https://compgen.bio.ub.edu" target="_blank">Computational Genomics Lab</a>, at the University of Barcelona.
     </p>
 
+    <br>
+    <hr>
     <h3>Citing PlanNET</h3>
 
     <blockquote>
       <p>
-        S Castillo-Lara, J F Abril<br />
-        <b>PlanNET</b>: homology-based predicted interactome for multiple planarian transcriptomes<br />
-        Bioinformatics, AOP Nov 24th, 2017, <a href="https://doi.org/10.1093/bioinformatics/btx738">btx738</a><br />
+        <a href="https://academic.oup.com/bioinformatics/article/34/6/1016/4657068" target="_blank"><b>PlanNET</b>: homology-based predicted interactome for multiple planarian transcriptomes</a>
+        <br/>
+        S. Castillo-Lara, J.F. Abril<br />
+        <i>Bioinformatics</i>, Volume 34, Issue 6, 15 March 2018, Pages 1016–1023, <a href="https://doi.org/10.1093/bioinformatics/btx738" target="_blank">btx738</a><br />
       </p>
     </blockquote>
+
+    <ul>
+        <li>BibTex:</li>
+    </ul>
+    <pre>
+        @article{doi:10.1093/bioinformatics/btx738,
+            author = {Castillo-Lara, S and Abril, J F},
+            title = {PlanNET: homology-based predicted interactome for multiple planarian transcriptomes},
+            journal = {Bioinformatics},
+            volume = {34},
+            number = {6},
+            pages = {1016-1023},
+            year = {2018},
+            doi = {10.1093/bioinformatics/btx738},
+            URL = {http://dx.doi.org/10.1093/bioinformatics/btx738},
+            eprint = {/oup/backfile/content_public/journal/bioinformatics/34/6/10.1093_bioinformatics_btx738/2/btx738.pdf}
+        }
+    </pre>
 
 {% endblock content %}
 
