--- a/NetExplorer/templates/NetExplorer/netexplorer.html
+++ b/NetExplorer/templates/NetExplorer/netexplorer.html
@@ -331,6 +331,7 @@
                                     <div class="funkyradio-success">
                                         <input  id="nodes-type" type="radio" class="netexplorer-form-type" name="type" value="node" checked/>
                                         <label for="nodes-type">Nodes</label>
+                                        <span class="glyphicon glyphicon-info-sign" style="color:#F8F8F8"></span>
                                     </div>
                                 </a>
                                 <a class="info-tooltip" title="
@@ -339,7 +340,10 @@
                                     <div class="funkyradio-success">
 
                                         <input id="pathway-type" type="radio" class="netexplorer-form-type" name="type" value="pathway"/>
-                                        <label for="pathway-type">Pahtway</label>
+                                        <label for="pathway-type">Pahtway</label> 
+                                        <a class="info-tooltip" href="https://www.kegg.jp/kegg-bin/search_pathway_text?map=hsa&keyword=&mode=1&viewImage=true" target="_blank" title="See all Kegg Pathways">
+                                            <span class="glyphicon glyphicon-info-sign"></span>
+                                        </a>
                                     </div>
                                 </a>
 
