--- a/NetExplorer/templates/NetExplorer/base.html
+++ b/NetExplorer/templates/NetExplorer/base.html
@@ -33,7 +33,7 @@
                     </div>
                 </div>
 
-                <nav class="navbar navbar-default">
+                <nav class="navbar navbar-plannet">
                     <div class="container-fluid">
                         <ul class="nav navbar-nav">
                             <li id="navbar-home"><a href="{% url index_view %}">Home</a></li>
