--- a/NetExplorer/templates/NetExplorer/netexplorer.html
+++ b/NetExplorer/templates/NetExplorer/netexplorer.html
@@ -323,7 +323,7 @@
                                     <div class="funkyradio-success">
 
                                         <input id="pathway-type" type="radio" class="netexplorer-form-type" name="type" value="pathway"/>
-                                        <label for="pathway-type">Pahtway</label>
+                                        <label for="pathway-type">Pathway</label>
                                     </div>
                                 </a>
 
