--- a/NetExplorer/templates/NetExplorer/index.html
+++ b/NetExplorer/templates/NetExplorer/index.html
@@ -16,6 +16,10 @@
 
         -->
 
+        <div class="update-msg">
+            <span class="glyphicon glyphicon-bullhorn"></span>&nbsp&nbsp&nbsp PlanNET has been updated to version 1.1. See <a href="{% url about %}#update-notes" title="Update notes">update notes</a>.
+        </div>
+        <hr>
         <div class="row row-app">
             <div class="col-sm-6">
                 <div class="panel panel-info app-container" >
