--- a/NetExplorer/templates/NetExplorer/netexplorer.html
+++ b/NetExplorer/templates/NetExplorer/netexplorer.html
@@ -445,7 +445,7 @@
             </div>
             <div class="slider-symbol-plus">+</div>
 
-            <br>
+            <br><hr>
             <div class="plen-container">
                 <h3>Non-Human interactions</h3>
                 <fieldset id="show-plen">
@@ -455,6 +455,29 @@
 
                         <input id="show" name="show-plen" type="radio" value="show" checked>
                         <label class="show-plen-label" for="show" onclick="">Show</label>
+                        <a></a>
+                    </div>
+                </fieldset>
+                <!--
+                <div class="switch-light switch-candy show-plen-label" onclick="">
+                    <input id="hide-plen" name="show-plen" type="radio">
+                    <label for="hide-plen" onclick="">Hide</label>
+                    <input id="show-plen" name="show-plen" type="radio">
+                    <label for="show-plen" onclick="">Show</label>
+                    <a></a>
+                </div>
+            -->
+            </div>
+            <hr>
+
+            <div class="plen-container">
+                <h3>Node Labels</h3>
+                <fieldset id="change-labels">
+                    <div class="switch-toggle switch-candy show-plen-label">
+                        <input id="h-label" name="changeLabels" type="radio" value="human">
+                        <label class="show-plen-label" for="h-label" onclick="">Human</label>
+                        <input id="pl-label" name="changeLabels" type="radio" value="planarian" checked>
+                        <label class="show-plen-label" for="pl-label" onclick="">Planarian</label>
                         <a></a>
                     </div>
                 </fieldset>
@@ -659,6 +682,7 @@
         <script src="{% static 'js/netexplorer-showhomologs.js' %}"></script>
         <script src="{% static 'js/netexplorer-filteredges.js' %}"></script>
         <script src="{% static 'js/get-card.js' %}"></script>
+        <script src="{% static 'js/netexplorer-change-labels.js' %}"></script>
         <script src="{% static 'js/netexplorer-addnode.js' %}"></script>
         <script src="{% static 'js/netexplorer-cytoscape.js' %}"></script>
         <script src="{% static 'js/netexplorer-showconnections.js' %}"></script>
