Added option to download interactions.

--- a/NetExplorer/templates/NetExplorer/downloads.html
+++ b/NetExplorer/templates/NetExplorer/downloads.html
@@ -25,6 +25,7 @@
         <select id="download-data" name="data" class="selectpicker" title="What to download">
                 <option value="contig">Contig Sequences (FASTA)</option>
                 <option value="orf">Open Reading Frames (FASTA)</option>
+                <option value="interactions">Interactions (CSV)</option>
                 <option value="homology">Human homologs (CSV)</option>
                 <option value="pfam">PFAM domains (CSV)</option>
                 <option value="go">Gene Ontologies (CSV)</option>
