--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -154,15 +154,44 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .row-app {
-    width: 100%;
+    width: 80%;
+    margin-left: 10% !important;
     margin-bottom: 1%;
 }
 
 .app-container {
     text-align: center;
     float: left;
-    height: 300;
+    height: 250px;
     width: 100%;
+}
+
+.app-container.panel-success {
+    border-color: #449d44 !important;
+}
+
+.app-container.panel-info {
+    border-color: #5bc0de !important;
+}
+
+.app-container.panel-success {
+    border-color: #dff0d8;
+}
+
+.app-container.panel-warning {
+    border-color: #ec971f !important;
+}
+
+.app-container.panel-planexp {
+    border-color: #fa5556 !important;
+}
+
+.app-container.panel-blast {
+    border-color: #9051b1 !important;
+}
+
+.app-container {
+    border: solid 2.5px !important;
 }
 
 
@@ -174,7 +203,7 @@ h1, h2, h3, h4, h5, h6 {
 .app-icon {
     margin-top: 25px;
     margin-bottom: 15px;
-    width: 180;
+    width: 150;
 }
 
 
@@ -186,7 +215,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .panel-blast {
-    border-color: #e7ccf6 !important;
     border-style: solid !important;
 }
 
@@ -196,7 +224,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .panel-planexp {
-    border-color: #FDD4D4 !important;
     border-style: solid !important;
 }
 
