--- a/NetExplorer/templates/NetExplorer/about.html
+++ b/NetExplorer/templates/NetExplorer/about.html
@@ -50,7 +50,8 @@
 
     <br>
     <hr>
-    <h3 id="update-notes">Update Notes</h3>
+    <h3 id="update-notes">1.1 Update Notes</h3>
+    <h4>August 7th 2018</h4>
     PlanNET has been updated from version 1.0 (published version at <a href="https://academic.oup.com/bioinformatics/article/34/6/1016/4657068" target="_blank">Bioinformatics</a>) to version 1.1.
 
     These are the most important changes:
